--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+appdirs==1.4.3
 Django==1.11.1
+django-debug-toolbar==1.8
+docutils==0.13.1
 marshmallow==2.13.5
-pybeerxml==1.0
+packaging==16.8
+pyparsing==2.2.0
 pytz==2017.2
+six==1.10.0
+sqlparse==0.2.3
 webargs==1.6.3
